--- a/.github/workflows/project-issues.yaml
+++ b/.github/workflows/project-issues.yaml
@@ -1,4 +1,4 @@
-name: Add New Issues to Project Board
+name: Add bugs to bugs project
 
 on:
   issues:
@@ -7,10 +7,10 @@ on:
 
 jobs:
   add-to-project:
+    name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - name: Add issue to project board
-        uses: actions/add-to-project@v1
+      - uses: actions/add-to-project@v1
         with:
-          project-url: https://github.com/users/axelNTI/projects/3/settings
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          project-url: https://github.com/users/axelNTI/projects/4
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
