--- a/.github/workflows/project-issues.yaml
+++ b/.github/workflows/project-issues.yaml
@@ -10,7 +10,7 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@v1
+      - uses: actions/add-to-project@RELEASE_VERSION
         with:
           project-url: https://github.com/users/axelNTI/projects/4
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
